Riley Williams		<rhw@MemAlpha.cx>		16 Oct 2001
Simon Weijgers		<simon@weijgers.com>		15 Nov 1998
Thomas McWilliams	<tgm9999@yahoo.com>		 2 Apr 2001

------------------------------------------------------------------------------

Thu Oct 18 16:53:02 EEST 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fix in makefiles. version.h and compile.h are needed by "make dep"

Wed Oct 17 11:32:57 CEST 2001	Arnaud Launay <asl@launay.org>

	* Updated my current email address.

Tue Oct 16 21:59:27 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reformatted ELKS_VERSION_CODE to reflect the actual use made of
	  the PRE's as being BEFORE the non-PRE version rather than after
	  as was previously assumed. Also allowed up to 255 PRE's between
	  PATCHLEVEL increments.
	* Bumped version to 0.0.87-pre1 in case anything is using the
	  above field.

Tue Oct  9 16:03:21 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reformatted CHANGELOG to make it easier to find contributor's
	  current email addresses.
	* Created list of standard Makefile rules where all rules perform
	  exactly as documented.

Sun Oct  7 20:28:37 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added `make tar` and skeletons for `make rpm` and `make deb` to
	  base Makefile.

Fri Oct  5 01:08:14 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Removed files created in compilation from CVS archive, and thus
	  from ELKS distribution set. These were elks/include/compile.h
	  and elks/include/version.h which are both created anew as part
	  of the compilation process.

Thu Oct  4 00:00:00 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Removed empty depend.awk and hfiles.sh from elks/scripts directory.
	* Tweaked elks/Makefile-rules to show my idea of how the Makefile
	  system ought to work. The aim is that the rules in here will be
	  both available and used by every Makefile in the tree.
	* Changed tag v0m0m73 to elks-0_0_73 to match other tags.

Wed Oct  3 23:37:43 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
